--- a/sass/components/components.sass
+++ b/sass/components/components.sass
@@ -119,9 +119,10 @@ img
 	// transition: 1250ms ease-in-out all
 	// transition-property: opacity
 	// opacity: 0
+	padding-top: 3em
 	width: 100%
 	position: absolute
-	top: 50%
+	// top: 50%
 	display: flex
 	flex-flow: column
 	align-items: center
@@ -148,6 +149,7 @@ img
 		padding: 20em 0
 
 	.info-inner
+		padding-top: 0
 		flex-flow: row wrap
 		div
 			flex: 1
