--- a/sass/cta/cta.sass
+++ b/sass/cta/cta.sass
@@ -1,8 +1,10 @@
 .cta
 	text-align: center
 	.cta-button-container
-		margin: 2em
+		margin-top: 2em
+		margin-bottom: 3em
 	p
+		padding-top: 3em
 		margin-bottom: 3em
 	label
 		margin-right: 0.5em
