--- a/sass/layout/layout.sass
+++ b/sass/layout/layout.sass
@@ -15,7 +15,7 @@ body
 .grid
 	// margin: 0 3em $pad 3em
 	section
-		padding: 10em 0
+		// padding: 10em 0
 		margin: 0 2em
 
 // 	&:after 
